# NOTest

./: .gitignore  README.md  pyproject.toml  requirements.txt
notest/: __init__.py  _setting.py  cli.py  plugin.py  run.py  skipif.py
