[project]
name = "notest"
description = "Not Only Test, Autotest Framework with AI"
authors = [
    { name = "mikigo", email = "1964191531@qq.com" },
]
dependencies = [
    "pytest-timeout",
    "pytest-rerunfailures",
    "allure-pytest",
    "funnylog2",
    "click",
]
dynamic = ["version"]

requires-python = ">=3.6"
readme = "README.md"
license = { text = "GPL2.0" }

[project.optional-dependencies]


[project.scripts]
notest = "notest.cli:cli"

[project.entry-points.pytest11]
notest = "notest.plugin"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch]
version = { path = "notest/__version__.py" }

[tool.hatch.build.targets.wheel]
packages = [
    "/notest",
]

[tool.hatch.build.targets.sdist]
exclude = [
  "/.github",
  "/.venv",
  "/.env",
  "/.gitignore",
  "/dist",
  "/docs",
  "/node_modules",
  "/tests",
  "/package.json",
  "/Pipfile",
  "/publish.sh",
]